<resources>
    <string name="app_name">PortalBDN</string>

    <!--    SPLASH-->
    <string name="autor">by Jordi Rubiralta</string>

    <!--    MENU-->
    <string name="inici">Inici</string>
    <string name="noticies">Notícies</string>
    <string name="calendari">Calendari</string>
    <string name="enquestes">Enquestes</string>
    <string name="incidencies">Incidències</string>
    <string name="configuracio">Configuració</string>

    <string name="nova_incidencia">Nova Incidències</string>

    <!--    LOGIN-->
    <string name="login_title">Iniciar sessió</string>
    <string name="username_hint">Nom d\'usuari</string>
    <string name="password_hint">Contrasenya</string>
    <string name="login_text">Entrar</string>
    <string name="register_text">Encara no tens usuari?</string>
    <string name="register_option">Registra\'t!</string>
    <string name="forgot_option">Has oblidat la teva contrasenya?</string>
    <string name="error_message">Falta omplir algun camp</string>

    <!--    REGISTER-->
    <string name="register_title">Registra\'t</string>
    <string name="name">Nom</string>
    <string name="surname">Cognom</string>
    <string name="age">Edat</string>
    <string name="password">Contrasenya</string>
    <string name="mail">Correu electrònic</string>
    <string name="newspaper_selector">Quina font de notícies vols per defecte?</string>
    <string name="have_user">Ja tens usuari?</string>
    <string name="do_login">Inicia sessió</string>
    <string name="error_repeat_mail">Els emails són diferents</string>

    <!--    Nova incidencia-->
    <string name="incidencia_title">Títol</string>
    <string name="incidencia_title_hint">Banc trencat</string>
    <string name="incidencia_description">Descripció</string>
    <string name="incidencia_description_hint">El banc de davant del McDonalds està trencat.</string>
    <string name="incidencia_location">On es troba aquest problema?</string>
    <string name="incidencia_location_hint">Cantonada carrer del Mar amb la Rambla</string>
    <string name="btn_new_incidencia">Afegir</string>

    <!--    Noticies-->
    <string name="informacio">Informació</string>

    <!--    Dialog-->
    <string name="dialog_message_logout">Estàs segur que vols tancar la sessió?</string>
    <string name="dialog_message_news">Per canviar el diari font de notícies accedeix a Configuració > Canviar diari font</string>
    <string name="ok">D\'acord</string>

    <!--    Configuració-->
    <string name="app_info_title">Per què serveix l'aplicació?</string>
    <string name="app_info">Aquesta aplicació té la finalitat d\'acostar els ciutadans amb l\'ajuntament i facilitar-ne la comunicació. Permet veure notícies de diferents mitjans de comunicació de la ciutat, veure esdeveniments propers, contestar preguntes formulades pel mateix ajuntament i, finalment, reportar incidències.</string>
    <string name="logout">Tancar sessió</string>
    <string name="totbadalona">Tot Badalona</string>
    <string name="diari_de_badalona">Diari de Badalona</string>
    <string name="independent_de_badalona">L\'Independent de Badalona</string>

</resources>
