<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/zz_card_background"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_dialog"
            android:paddingStart="@dimen/padding_dialog"
            android:paddingEnd="@dimen/padding_dialog"
            android:textSize="@dimen/text_medium"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/highwaygothicnarrow"
            android:text="@string/informacio" />

        <TextView
            android:id="@+id/dialog_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_dialog"
            android:paddingBottom="@dimen/padding_dialog"
            android:gravity="center"
            android:paddingStart="@dimen/padding_dialog"
            android:paddingEnd="@dimen/padding_dialog"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_title"
            android:fontFamily="@font/highwaygothicnarrow"
            android:text="@string/dialog_message_news" />


        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/zz_dialog_button_news"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_small"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_description"
            android:fontFamily="@font/highwaygothicnarrow"
            android:text="@string/ok" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>