<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/app_information_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/highwaygothicnarrow"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:textAlignment="viewStart"
                android:text="@string/app_info_title"
                android:textStyle="bold"
                android:textColor="@color/darkx_grey"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/app_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/highwaygothicnarrow"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:textAlignment="viewStart"
                android:text="@string/app_info"
                android:textColor="@color/darkx_grey"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_information_title" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/app_information"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimen_12"/>

            <TextView
                android:id="@+id/default_newspaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/highwaygothicnarrow"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:textAlignment="viewStart"
                android:text="@string/newspaper_selector"
                android:textStyle="bold"
                android:textColor="@color/darkx_grey"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator" />

            <LinearLayout
                android:id="@+id/ll_diaribadalona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/dimen_48"
                app:layout_constraintTop_toBottomOf="@id/default_newspaper">

                <RadioButton
                    android:id="@+id/rb_diaribadalona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/diaribadalona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkx_grey"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/highwaygothicnarrow"
                    android:text="@string/diari_de_badalona"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_totbadalona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/dimen_48"
                app:layout_constraintTop_toBottomOf="@id/ll_diaribadalona">

                <RadioButton
                    android:id="@+id/rb_totbadalona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/totbadalona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkx_grey"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/highwaygothicnarrow"
                    android:text="@string/totbadalona"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_independent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/dimen_48"
                app:layout_constraintTop_toBottomOf="@id/ll_totbadalona">

                <RadioButton
                    android:id="@+id/rb_independent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/independent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darkx_grey"
                    android:textSize="@dimen/text_small"
                    android:fontFamily="@font/highwaygothicnarrow"
                    android:text="@string/independent_de_badalona"/>

            </LinearLayout>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/ll_independent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimen_12"/>

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/highwaygothicnarrow"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_24"
                android:textAlignment="viewStart"
                android:text="@string/logout"
                android:textStyle="bold"
                android:textColor="@color/darkx_grey"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator2" />

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/dimen_12"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>